# experiments

./: .gitignore  rtt_communicator.py  rtt_deserializer.py  rtt_plotter.py  test_bin  txt_to_bin.py
bitsery/: .gitrepo
deserialization/: CMakeLists.txt  main.cpp  rtt_deserializer.cpp  rtt_deserializer.hpp  rtt_metrics_deserializer.hpp
deserialization/accelerometer/: CMakeLists.txt  common_structs.cpp
deserialization/accelerometer/include/accelerometer/: common_structs.hpp
deserialization/bitsery/tests/: CMakeLists.txt
deserialization/cobs/: CMakeLists.txt
deserialization/cobs/include/cobs/: cobs.hpp
deserialization/pybind11/: .gitrepo
deserialization/rtt_metrics/: CMakeLists.txt
deserialization/rtt_metrics/include/rtt_metrics/: accel_metrics.hpp  rtt_metrics_type.hpp
